test_regress/t/t_constraint_unq_arr_derived_inline_unsup.out
%Warning-CONSTRAINTIGN: t/t_constraint_unq_arr_derived_inline_unsup.v:35:11: Unsupported: Unique constraint in randomize() with {}
                                                                           : ... note: In instance 't'
   35 |           unique {foo.pmp_reg};
      |           ^~~~~~
                        ... For warning description see https://verilator.org/warn/CONSTRAINTIGN?v=latest
                        ... Use "/* verilator lint_off CONSTRAINTIGN */" and lint_on around source to disable this message.
%Error: Exiting due to
